# tide-adj

./: README.md  __init__.py  build_native_sampler.sh  chunking.py  multi_tda_objective.py  native_sampler.cpp  objectives.py  pyproject.toml  specs.py  tda_objective.py
src/tide_adj/: __init__.py  coords.py  fastmeep_grid.py  native_sampler.cpp  native_sampler.py  native_sampler.pyi  sampling_grid.py  tda_objective.py
tests/: test_multi_tda_objective.py  test_native_sampler_names.py  test_specs.py
